# MPstats-FMCG-ETL

./: .gitignore  AGENTS.md  CLASSIFIER_PERFORMANCE_AUDIT.md  DUCKDB_OPTIMIZATION_REPORT.md  MPStats Local App.bat  MPStats Local App.command  MPstats_export_yearmonnth_v1.3_pipeline.ipynb  README.md  filter.md  plugin-redoc-0.yaml  pyproject.toml  requirements.txt  Справочник категорий MP STATS.csv  справочник tasks архив.md
.cursor/agents/: mpstats-tasks-handbook.md
.cursor/rules/: category-handbook-exact.mdc  mpstats-tasks-handbook-subagent.mdc  preserve-user-comments.mdc
classifiers/: __init__.py  engine.py  gui.py  manual_overrides.csv  rules.csv
docs/: AI_INDEX.md  USER_GUIDE.md
mpstats_app/: __init__.py  config.py  main.py  schemas.py  utils.py
mpstats_app/api/: __init__.py  dependencies.py  exports.py  health.py  products.py  projects.py  quality.py  reports.py  runs.py  schedules.py  settings.py  workflow.py
mpstats_app/repositories/: __init__.py  duckdb_repository.py
mpstats_app/services/: __init__.py  category_catalog_service.py  job_service.py  (+9 more)
pipeline/: __init__.py  cli.py  models.py  step1_config.py  step1_export_config.example.json  step1_gui.py
scripts/: benchmark_classifier.py  classifier_perf_utils.py  duckdb_benchmark.py  duckdb_mock_data.py  launch_local_app.sh  launch_local_app_windows.py  profile_classifier.py
tests/: test_data_quality_service.py  test_duckdb_connection.py  test_pipeline_services.py  test_sql_service.py  test_web_api.py  test_weight_parser_service.py
web/: .gitignore  index.html  package-lock.json  package.json
(+48 files in other folders)
