[project]
name = "mpstats-pipeline"
version = "0.1.0"
description = "CLI pipeline for MPStats exports, normalization, parsing, merging, and classification."
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.0",
    "fastapi>=0.115",
    "numpy>=1.24",
    "openpyxl>=3.1",
    "pandas>=2.0",
    "requests>=2.31",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
]

[project.scripts]
mpstats-app = "mpstats_app.main:main"
mpstats-pipeline = "pipeline.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
